objects/Telemetry_Event__c.object
<CustomObject>
    <fields>
        <fullName>EngineTemp__c</fullName>
        <label>EngineTemp</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FuelLevel__c</fullName>
        <label>FuelLevel</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_VIN__c</fullName>
        <label>Vehicle VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <label>Telemetry Event</label>
    <nameField>
        <label>Telemetry Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telemetry Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>